<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.ControllerActivity"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/top_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="9dp"
            android:fontFamily="casual"
            android:text="@string/bottom_message"
            android:textAlignment="center"
            android:textColor="#702963"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="389dp"
            android:layout_height="601dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.223">


            <View
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:background="@color/pink" />


            <TextView
                android:id="@+id/authTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/auth_title"
                android:textColor="#702963"
                android:textSize="28sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/auth_subtitle"
                android:textColor="#3A405A"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/pink" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/username_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />


            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />


            <ProgressBar
                android:id="@+id/authProgress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/signInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/rosewood"
                    android:textStyle="bold"
                    android:fontFamily="casual"
                    android:text="@string/sign_in" />


                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:textStyle="bold"
                    android:fontFamily="casual"
                    android:backgroundTint="@color/byzantine"
                    android:text="@string/register" />


            </LinearLayout>


            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="#C62828"
                android:textSize="14sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/mobile"
                android:src="@drawable/mobile" />



        </LinearLayout>

        <TextView
            android:id="@+id/bottom_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/bottom_message"
            android:textAlignment="center"
            android:textColor="#702963"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.156" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


