...
    <string name="share_success">Dream shared!</string>
    <string name="share_failure">Unable to share dream: %1$s</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_required">Please sign in to share dreams</string>
    <string name="signed_in_as">Signed in as %1$s</string>
    <string name="auth_error">Authentication failed: %1$s</string>
    <string name="enter_email_password">Please enter email and password</string>
    <string name="enter_username">Please enter a username</string>
    <string name="unshare_dream">Unshare</string>
    <string name="unshare_success">Dream unshared from friends</string>
    <string name="unshare_failure">Unable to unshare dream: %1$s</string>
    <string name="shared_from">Shared by %1$s</string>
    <string name="shared_on">Shared on %1$s</string>
    <string name="back_to_shared_list">Back to shared dreams</string>
...
