...
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerTopMain"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/userStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#3A405A"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
...
